IMP bring bug pull all repositories and add filter by type on dbs

--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -12,7 +12,7 @@
             <field name="demo_data"/>
             <field name="partner_id"/>
             <!-- <field name="database_type_id"/> -->
-            <!-- <field name="instance_type_id"/> -->
+            <field name="instance_type_id"/>
             <field name="server_id"/>
             <field name="environment_id"/>
             <field name="instance_id"/>
