--- a/infrastructure/view/environment_view.xml
+++ b/infrastructure/view/environment_view.xml
@@ -78,16 +78,16 @@
                 <group>
                     <group>
                         <field name="name"/>
-                        <field name="description"/>
                     </group>
                     <group>
-                        <field name="number"/>
+                        <field name="description"/>
                     </group>
                 </group>
                 <notebook>
-                    <page string="Advanced Conf.">
+                    <page string="Advanced Conf." groups="base.group_no_one">
                         <group>
                             <field name="path"/>
+                            <field name="number"/>
                         </group>
                     </page>
                     <page string="Notes">
