--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -17,9 +17,9 @@
             <field name="environment_id"/>
             <field name="instance_id"/>
             <field name="update_state"/>
+            <filter string="Not Inactive" name="not_inactive" domain="[('state', '!=', 'inactive')]"/>
             <filter string="Check Database" name="check_database" domain="[('check_database', '=', True)]"/>
             <field name="overall_state"/>
-            <filter string="Not Cancel" name="not_cancel" domain="[('state','!=','cancel')]"/>
             <!-- <filter string="Not Cancel" name="check_database" domain="[('check_database', '=', True)]"/> -->
             <group expand="0" string="Group By...">
                 <filter string="Partner" context="{'group_by':'partner_id'}"/>
@@ -43,24 +43,28 @@
         <form string="database">
             <field name="id" invisible="1"/>
             <header>
-                <button name="action_wfk_set_draft"
+                <button name="action_to_draft"
                     type="object"
                     states="cancel"
                     string="to Draft"
                     />
-                <button name="sgn_to_maintenance"
+<!--                 <button name="action_to_maintenance"
+                    type="object"
                     states="active"
                     string="to Maintenance"
-                    />
-                <button name="sgn_deactivate"
+                    /> -->
+<!--                 <button name="action_deactivate"
+                    type="object"
                     states="active"
                     string="Deactivate"
-                    />
-                <button name="sgn_to_active"
+                    /> -->
+                <button name="action_activate"
+                    type="object"
                     states="deactivated,draft,maintenance"
                     string="to Active"
                     />
-                <button name="sgn_cancel"
+                <button name="action_cancel"
+                    type="object"
                     states="active,deactivated,maintenance"
                     string="Cancel"
                     />
@@ -261,11 +265,11 @@
             <field name="name"/>
             <field name="partner_id"/>
             <field name="server_id"/>
-            <field name="environment_id" invisible="1"/>
-            <field name="instance_id"/>
+            <field name="environment_id"/>
+            <field name="instance_id" invisible="1"/>
             <field name="state"/>
             <!-- <field name="update_state"/> -->
-            <field name="overall_state"/>
+            <field name="overall_state" invisible="1"/>
         </tree>
     </field>
 </record>
@@ -307,7 +311,7 @@
     <field name="view_id" ref="view_database_kanban"/>
     <field name="search_view_id" ref="view_infrastructure_database_filter"/>
     <field name="domain">[]</field>
-    <field name="context">{'search_default_not_cancel': 1}</field>
+    <field name="context">{'search_default_not_inactive': 1}</field>
 </record>
 
 <record id="action_infrastructure_databases_to_correct" model="ir.actions.act_window">
@@ -318,7 +322,7 @@
     <field name="view_id" ref="view_database_kanban"/>
     <field name="search_view_id" ref="view_infrastructure_database_filter"/>
     <field name="domain">[]</field>
-    <field name="context">{'search_default_overall_state': 'error', 'search_default_check_database': True}</field>
+    <field name="context">{'search_default_overall_state': 'error', 'search_default_check_database': True, 'search_default_not_inactive': 1}</field>
 </record>
 
 <menuitem
