ADD instance update

--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -271,6 +271,7 @@
             <field name="server_id"/>
             <field name="environment_id"/>
             <field name="state" />
+            <field name="databases_state" />
         </tree>
     </field>
 </record>
